
[19/01/2021]
--> Versão Inicial;
# Suporte ao Jornal Folha de São Paulo;
# Suporte ao Jornal Estadão;

=-=-=-=-=-=-=-=-=-=-=-=-=-=-= v1.0.4 =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=

[26/01/2021]
# Adicionado Jornal Gazeta do Povo;
# Adicionado Jornal O Globo;
# Correção Scroll Infinito Jornal Estadão;


=-=-=-=-=-=-=-=-=-=-=-=-=-=-= v1.0.5 =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=

[27/01/2021]
# Adicionado SuperInteressante;
# Adicionado Quatro Rodas;
# Adicionado VEJA e VEJA SP;
# Adicionado Responde Ai

[02/02/2021]
# Implementação de Notificações via OTA;
# Implementação SnackBar;
# Lançamento Oficial do Site;


=-=-=-=-=-=-=-=-=-=-=-=-=-=-= v1.0.6 =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=

[04/02/2021]
# Adicionado Exame;
# Adicionado Guia do Estudante;
# Add suporte quebra de linha SnackBar;

[09/02/2021]
# Fix Delay Mensagem de Update e Mensagens API;
# Add verificaAtualizacaoVersao() em modifyExame();

[12/02/2021]
# Add API de contagem de conteúdos desbloqueados pela Extensão;
# Remoção de todas CDN's da extensão e todos arquivos estão sendo carregados localmente;


=-=-=-=-=-=-=-=-=-=-=-=-=-=-= v1.0.7 =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=

[19/02/2021]
# Adicionado Revista Época;

[25/02/2021]
# Adicionado Revista Época definitivo no CRX;
# FIXED BUG não mostra imagem notícia Revista Época;
# FIXED BUG não mostra imagem notícia Gazeta do Povo;

[31/03/2021]
# Ajuste Header Responde Aí - Exclui apenas botões de login;
# FIXED BUG Responde Aí - Mostra tela de Conteúdo Exclusivo;

[01/04/2021]
# Adicionado Revista Galileu;
# Adicionado Revista Época Negocios;
# Adicionado Revista Marie Claire;
# Adicionado Globo Rural;
# Adicionado Auto Esporte;
# Adicionado Pequenas Empresas e Grandes Negocios
# CRX atualizado;

[06/04/2021]
# Adicionado Conteudo Desbloqueado Responde Aí Login;
# Responde Aí FINAL BUILD;


=-=-=-=-=-=-=-=-=-=-=-=-=-=-= v1.0.8 =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=

[28/04/2021]
# Add incrementaConteudoAPI() sites globo celular;
# Adicionado JOTA;
# Adicionado NSC Total;