@@ -49,7 +49,31 @@ else if(currentURL.includes("jota.info")){
 else if(currentURL.includes("nsctotal.com.br")){
     modifyNSC();
 }
+else if(currentURL.includes("nytimes.com")){
+    modifyNYTIMES();
+}
 
+
+
+/* ========================= NEWYORK TIMES =========================== */
+
+function modifyNYTIMES()
+{
+    let r = setInterval(()=>{
+        if(verificaElemento("#gateway-content")){
+            clearInterval(r);
+            document.querySelector("#gateway-content").remove();
+            document.querySelector(".css-1bd8bfl").remove();
+            
+            let article = document.querySelector(".css-mcm29f");
+            article.style.position = "unset";
+            article.style.overflow = "auto";
+
+            incrementaConteudoAPI();
+            verificaAtualizacaoVersao();
+        }
+    }, 800);
+}
 
 /* ========================= NSC TOTAL =============================== */
 
